# ltc_frameworks

./: .gitignore  CLAUDE.md  README.md  RUN_LOG.md  S1_S5_COMPREHENSIVE_METRICS_SUMMARY.txt  S1_vs_S2_ANALYSIS.md  S3_S4_S5_CHANNEL_ATTRIBUTION.txt  S3_S4_S5_METRICS_SUMMARY.txt  S5_ANALYSIS_COMPLETE.txt  S5_SUPPLEMENTARY_BREAKTHROUGH.txt  extract_pause_window_metrics.py  extract_s3_pause_window_metrics.py  extract_s4_pause_window_metrics.py  extract_s5_pause_window_metrics.py  next_steps.txt  paper_notes.md  pyproject.toml
data/raw/: mmm_synthetic_generator.py
experiments/: registry.py  run_brief.py  run_experiment.py
experiments/configs/: framework1.yaml  framework2.yaml  framework3.yaml  framework3.yaml.bak2  supplementary_framework3.yaml
experiments/parameter_estimation/: estimated_params.json  f1_decay_search.py  f2_lag_selection.py  f3_prior_estimation.py  run_all.py
ltc/data/: __init__.py  features.py  loader.py
ltc/evaluation/: __init__.py  (+3 more)
mmm_synthetic_data/: mmm_synthetic_S1.csv  mmm_synthetic_S2.csv  mmm_synthetic_S3.csv  mmm_synthetic_S4.csv  mmm_synthetic_S5.csv  scenario_summary.csv
notebooks/: 00_data_exploration.ipynb  01_framework1_static_adstock.ipynb  02_framework2_dynamic_ts.ipynb  03_framework3_state_space.ipynb  04_benchmark_comparison.ipynb  mmm_synthetic_00_data_exploration.ipynb  mmm_synthetic_01_framework1_static_adstock.ipynb  mmm_synthetic_02_framework2_dynamic_ts.ipynb  mmm_synthetic_03_framework3_state_space.ipynb  mmm_synthetic_04_benchmark_comparison.ipynb
outputs/: experiment_log.csv  paper_notes.md  parameter_log.csv
(+25 files in other folders)
